<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_stok"
    app:cardElevation="2dp"
    app:cardCornerRadius="10dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageBarang"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:backgroundTint="@color/lightGrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/contdes" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/lightGrey"
            app:layout_constraintTop_toBottomOf="@+id/imageBarang">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:orientation="vertical"
                    android:padding="@dimen/cardview_horizontal_margin"
                    app:layout_constraintEnd_toStartOf="@+id/linearLayout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/judulBarang"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/poppins_semibold"
                        android:maxLines="3"
                        android:text="@string/judul_barang"
                        android:textColor="@color/textDiAwan"
                        android:textSize="@dimen/font_standar" />

                    <TextView
                        android:id="@+id/descBarang"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/poppins"
                        android:maxLines="2"
                        android:text="@string/deskripsi_barang_yang_dijual"
                        android:textColor="@color/textGrey"
                        android:textSize="@dimen/font_kecil" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/HargaAwal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/harga_barang"
                            android:fontFamily="@font/poppins"
                            android:textSize="@dimen/font_kecil"
                            android:textColor="@color/red"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ke"
                            android:paddingHorizontal="8dp"
                            android:fontFamily="@font/poppins"
                            android:textSize="@dimen/font_kecil"
                            android:textColor="@color/red"/>

                        <TextView
                            android:id="@+id/HargaJual"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/harga_jual_barang"
                            android:fontFamily="@font/poppins"
                            android:textSize="@dimen/font_kecil"
                            android:textColor="@color/red"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:background="@drawable/bg_stok"
                    android:padding="@dimen/cardview_horizontal_margin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/poppins"
                        android:text="@string/tersisa"
                        android:textAlignment="textEnd"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/font_standar" />

                    <TextView
                        android:id="@+id/jumlahStok"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/_123"
                        android:layout_gravity="end"
                        android:textAlignment="gravity"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/font_besar" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>