<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.inventory.DetailPermintaanActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/judul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_besar"
            android:text="@string/permintaan"
            android:fontFamily="@font/poppins_semibold"
            android:paddingHorizontal="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/kode_transaksi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kode_transaksi"
            android:textColor="@color/textGrey"
            android:textSize="@dimen/font_kecil"
            android:textAlignment="textEnd"
            android:fontFamily="@font/poppins"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:paddingHorizontal="@dimen/activity_horizontal_margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tanggal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tanggal_transaksi"
            android:textSize="@dimen/font_kecil"
            android:textColor="@color/textGrey"
            android:textAlignment="textEnd"
            android:fontFamily="@font/poppins"
            android:paddingHorizontal="@dimen/activity_horizontal_margin"
            app:layout_constraintEnd_toEndOf="@id/kode_transaksi"
            app:layout_constraintTop_toBottomOf="@id/kode_transaksi"/>

        <ImageView
            android:id="@+id/imageUsaha"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/_0"
            android:background="@color/colorAccent"
            android:scaleType="centerCrop"
            android:alpha="0.8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tanggal"/>

        <ImageView
            android:id="@+id/imagePenjual"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="280dp"
            android:layout_marginStart="18dp"
            android:backgroundTint="@color/lightGrey"
            android:contentDescription="@string/_0"
            android:src="@drawable/ic_foto_profil"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageUsaha"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:id="@+id/ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="108dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/namaUsaha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/nama_usaha"
                    android:textColor="@color/textDiAwan"
                    android:textSize="@dimen/font_standar" />

                <TextView
                    android:id="@+id/namaPemilik"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/nama_lengkap"
                    android:textSize="@dimen/font_kecil" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/alamat"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:drawablePadding="4dp"
                        android:fontFamily="@font/poppins_light"
                        android:gravity="center_vertical"
                        android:maxLines="3"
                        android:text="@string/alamat_usaha"
                        android:textSize="@dimen/font_kecil"
                        app:drawableStartCompat="@drawable/ic_marker"
                        app:drawableTint="@color/red"
                        app:layout_constraintEnd_toStartOf="@id/keMaps"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:id="@+id/keMaps"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_button"
                        android:paddingVertical="4dp"
                        android:paddingHorizontal="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_semibold"
                            android:text="@string/petunjuk_arah"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/font_kecil" />
                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/nomorHP"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:drawablePadding="4dp"
                        android:fontFamily="@font/poppins_light"
                        android:gravity="center_vertical"
                        android:text="@string/nomor_hp"
                        android:textSize="@dimen/font_kecil"
                        app:drawableStartCompat="@drawable/ic_baseline_phone_android_24"
                        app:drawableTint="@color/colorAccent"
                        app:layout_constraintEnd_toStartOf="@id/keWA"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:id="@+id/keWA"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_button"
                        android:backgroundTint="@color/colorPrimaryDark"
                        android:paddingVertical="4dp"
                        android:paddingHorizontal="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_semibold"
                            android:text="@string/hubungi"
                            android:textAlignment="center"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/font_kecil" />
                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/ratingPenjual"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="4dp"
                    android:fontFamily="@font/poppins_light"
                    android:gravity="center_vertical"
                    android:text="@string/_4_5"
                    android:textSize="@dimen/font_kecil"
                    app:drawableStartCompat="@drawable/ic_baseline_star_24"
                    app:drawableTint="@color/duskYellow" />
            </LinearLayout>

            <View
                android:id="@+id/view3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:background="@color/GARIS"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linearLayout"/>

            <TextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@color/textGrey"
                android:text="@string/detail_barang"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="@dimen/font_standar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view3"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutBarang"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/tv2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardBarang"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    app:cardCornerRadius="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/barang"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/contdes" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/namaBarang"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:maxLines="3"
                    android:text="@string/judul_barang"
                    android:textSize="@dimen/font_standar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/cardBarang"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/descBarang"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:fontFamily="@font/poppins"
                    android:maxLines="3"
                    android:text="@string/deskripsi_barang_yang_dijual"
                    android:textColor="@color/textGrey"
                    android:textSize="@dimen/font_kecil"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/cardBarang"
                    app:layout_constraintTop_toBottomOf="@id/namaBarang" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <TextView
                        android:id="@+id/jumlahBarang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textGrey"
                        android:textSize="@dimen/font_kecil"
                        android:text="@string/jumlah_barang"
                        android:layout_gravity="end"
                        android:gravity="end"
                        android:textAlignment="textEnd"
                        android:fontFamily="@font/poppins"/>

                    <TextView
                        android:id="@+id/totalHarga"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rp_0"
                        android:textSize="@dimen/font_standar"
                        android:textColor="@color/red"
                        android:layout_gravity="end"
                        android:fontFamily="@font/poppins_bold"/>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/tolak"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/red"
                android:fontFamily="@font/poppins_semibold"
                android:layout_marginEnd="8dp"
                android:text="@string/tolak"
                android:textColor="@color/textDiBiru"
                android:textSize="@dimen/font_standar"
                app:layout_constraintEnd_toStartOf="@id/terima"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutBarang" />

            <Button
                android:id="@+id/terima"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginStart="8dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/terima"
                android:textColor="@color/textDiBiru"
                android:textSize="@dimen/font_standar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tolak"
                app:layout_constraintTop_toBottomOf="@id/layoutBarang" />

            <TextView
                android:id="@+id/tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/dengan_memilih_tombol_terima_anda_setuju_memberikan_nomor_telepon_anda"
                android:textColor="@color/red"
                android:textSize="@dimen/font_kecil"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/terima"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>